html/submissions/1028/compile_log.txt
submission.cpp:4:8: error: ISO C++ forbids declaration of ‘output’ with no type [-fpermissive]
 output()
        ^
